removed href from email and on the way to fix multirow mundus

--- a/20seconds_resume/resume.tex
+++ b/20seconds_resume/resume.tex
@@ -10,14 +10,14 @@
 %%PERSONAL INFO%%%
 %%%%%%%%%%%%%%%%
 
-\profilepic{alice.jpeg} %path of profile pic
-\cvname{Alice} %your name
-\cvjobtitle{Adventurer}%your actual job position
-\cvdate{26 November 1865}%date of birth
-\cvaddress{United Kingdom}%address
-\cvnumberphone{+39 0325658974}%telphone number
-\cvmail{alice@wonderland.com}%e-mail
-\cvsite{http://en.wikipedia.org}%personal site
+\profilepic{guido2.jpg} %path of profile pic
+\cvname{Guido Avvisati} %your name
+\cvjobtitle{Scientific Programmer and\newline Data Scientist}%your actual job position
+\cvdate{28 October 1987}%date of birth
+\cvaddress{Utrecht, The Netherlands}%address
+\cvnumberphone{+31 681 90 39 38}%telphone number
+\cvmail{guido.avvisati~[at]~gmail.com}%e-mail
+\cvsite{\url{linkedin.com/in/guido-avvisati-6576a7120/}}%personal site
 
 
 \aboutme{
