fixed icon-text alignment and name-jobtitle alignment

--- a/20seconds_resume/resume.tex
+++ b/20seconds_resume/resume.tex
@@ -12,7 +12,7 @@
 
 \profilepic{guido2.jpg} %path of profile pic
 \cvname{Guido Avvisati} %your name
-\cvjobtitle{Scientific Programmer and\newline Data Scientist}%your actual job position
+\cvjobtitle{{\hskip 1.5mm} Scientific Programmer}%your actual job position
 \cvdate{28 October 1987}%date of birth
 \cvaddress{Utrecht, The Netherlands}%address
 \cvnumberphone{+31 681 90 39 38}%telphone number
