--- a/smart-fancy-latex-cv/cv.tex
+++ b/smart-fancy-latex-cv/cv.tex
@@ -1,4 +1,4 @@
-%!TEX TS-program = xelatex
+%!TEX TS-program = lualatex
 \documentclass[]{friggeri-cv}
 \usepackage{afterpage}
 \usepackage{hyperref}
@@ -11,9 +11,8 @@
 % References:
 %   http://texdoc.net/texmf-dist/doc/latex/fontawesome/fontawesome.pdf
 %   https://www.ctan.org/tex-archive/fonts/fontawesome?lang=en
-%\usepackage{fontawesome}
+\usepackage{fontawesome}
 \usepackage{metalogo}
-\usepackage{dtklogos}
 \usepackage[utf8]{inputenc}
 \usepackage{tikz}
 \usetikzlibrary{mindmap,shadows}
