--- a/smart-fancy-latex-cv/cv.tex
+++ b/smart-fancy-latex-cv/cv.tex
@@ -50,13 +50,10 @@
 \definecolor{pblue}{HTML}{0395DE}
 
 \begin{document}
-\header{John}{Snow}
-      {Computer Engineer}
+\header{Guido}{{\hspace{1.5mm}}Avvisati}{Scientific Programmer}
       
 % Fake text to add separator      
-\fcolorbox{white}{gray}{\parbox{\dimexpr\textwidth-2\fboxsep-2\fboxrule}{%
-.....
-}}
+\fcolorbox{white}{gray}{\parbox{\dimexpr\textwidth-2\fboxsep-2\fboxrule}{.....}}
 
 % In the aside, each new line forces a line break
 \begin{aside}
